# pycpp

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci-pytest.yaml
examples/: matmul.py
pycpp/: utils.pyi
pycpp/functions/: _C.pyi
src/: main.cpp
src/math/: vector.cpp
src/utils/: simd.cpp  simd.h
tests/: test_matmul.py
